Fix gallery, navbar

--- a/index.html
+++ b/index.html
@@ -1,132 +1,167 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kheoba - Travel Management Platform</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-</head>
-<body>
-
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="header-content">
-        <img src="icons/mainIcon.jpg" alt="Main Icon" class="logo">
-        <nav>
-            <ul class="navbar">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="second.html">Reasons</a></li>
-                <li><a href="third.html">Features</a></li>
-            </ul>
-        </nav>
+      <a href="index.html">
+        <img src="icons/mainIcon.jpg" alt="Main Icon" class="logo" />
+      </a>
+      <nav>
+        <ul class="navbar">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="second.html">Reasons</a></li>
+          <li><a href="third.html">Features</a></li>
+        </ul>
+      </nav>
     </div>
 
-
-    <header style="background: url(wallper/nature_image.png) no-repeat center center">
-        <div class="container">
-            <h1>Welcome to Kheoba</h1>
-            <p>Your ultimate platform for managing and enhancing travel experiences. At Kheoba, we specialize in bridging the gap between travel companies, individual guides, and tourists by offering a comprehensive and user-friendly platform.</p>
-        </div>
+    <header style="background: url(wallper/nature_image.png)">
+      <div class="container">
+        <h1>Welcome to Kheoba</h1>
+        <p>
+          Your ultimate platform for managing and enhancing travel experiences.
+          At Kheoba, we specialize in bridging the gap between travel companies,
+          individual guides, and tourists by offering a comprehensive and
+          user-friendly platform.
+        </p>
+      </div>
     </header>
 
     <section id="about" class="container">
-        <h2>About Us</h2>
-        <div class="about-content">
-            <div class="about-text">
-                <p>Kheoba is dedicated to revolutionizing the travel industry by providing state-of-the-art tools and resources to both travel companies and individual guides. Our mission is to streamline the tour management process, making it easier, faster, and more efficient for everyone involved.</p>
-                <a href="third.html">
-                    <button class="button">CRM System & Features</button>
-                </a>
-            </div>
-            <div class="about-image">
-                <img src="icons/icon.png" alt="Revolutionizing Travel">
-            </div>
+      <h2>About Us</h2>
+      <div class="about-content">
+        <div class="about-text">
+          <p>
+            Kheoba is dedicated to revolutionizing the travel industry by
+            providing state-of-the-art tools and resources to both travel
+            companies and individual guides. Our mission is to streamline the
+            tour management process, making it easier, faster, and more
+            efficient for everyone involved.
+          </p>
+          <a href="third.html">
+            <button class="button">CRM System & Features</button>
+          </a>
         </div>
+        <div class="about-image">
+          <img src="icons/icon.png" alt="Revolutionizing Travel" />
+        </div>
+      </div>
     </section>
-    
 
-<section class="serviceBox">
-    <section id="services" class="container">
+    <section class="serviceBox">
+      <section id="services" class="container">
         <h2>Our Services</h2>
         <div class="services-container">
-            <div class="service">
-                <img src="icons/nine.jpg" alt="Tour details" class="imageService">
-                <div>
-                    <h3>Comprehensive Tour Management</h3>
-                    <ul>
-                        <li>Input and manage all tour details</li>
-                        <li>Seamless integration of contact information, widgets, and calculators</li>
-                        <li>Real-time updates and notifications</li>
-                    </ul>
-                </div>
+          <div class="service">
+            <img src="icons/nine.jpg" alt="Tour details" class="imageService" />
+            <div>
+              <h3>Comprehensive Tour Management</h3>
+              <ul>
+                <li>Input and manage all tour details</li>
+                <li>
+                  Seamless integration of contact information, widgets, and
+                  calculators
+                </li>
+                <li>Real-time updates and notifications</li>
+              </ul>
             </div>
-            <div class="service">
-                <img src="icons/three.jpg" alt="Personalized Assistant">
-                <div>
-                    <h3>Personalized Assistant</h3>
-                    <ul>
-                        <li>Intelligent assistant to help manage schedules and bookings</li>
-                        <li>Automated responses to common queries</li>
-                        <li>Customizable to suit individual guide preferences</li>
-                    </ul>
-                </div>
+          </div>
+          <div class="service">
+            <img src="icons/three.jpg" alt="Personalized Assistant" />
+            <div>
+              <h3>Personalized Assistant</h3>
+              <ul>
+                <li>
+                  Intelligent assistant to help manage schedules and bookings
+                </li>
+                <li>Automated responses to common queries</li>
+                <li>Customizable to suit individual guide preferences</li>
+              </ul>
             </div>
-            <div class="service">
-                <img src="icons/four.jpg" alt="Branding customization" class="imageService">
-                <div>
-                    <h3>Branding and Customization</h3>
-                    <ul>
-                        <li>Tailor the platform with your company's branding</li>
-                        <li>Easy logo customization</li>
-                        <li>Flexible design options to match your brand identity</li>
-                    </ul>
-                </div>
+          </div>
+          <div class="service">
+            <img
+              src="icons/four.jpg"
+              alt="Branding customization"
+              class="imageService"
+            />
+            <div>
+              <h3>Branding and Customization</h3>
+              <ul>
+                <li>Tailor the platform with your company's branding</li>
+                <li>Easy logo customization</li>
+                <li>Flexible design options to match your brand identity</li>
+              </ul>
             </div>
-            <div class="service">
-                <img src="icons/two.jpg" alt="Analytics and reporting" class="imageService">
-                <div>
-                    <h3>Analytics and Reporting</h3>
-                    <ul>
-                        <li>In-depth analytics to track tour performance</li>
-                        <li>Detailed reports on bookings, customer feedback, and financials</li>
-                        <li>Insights to help improve and grow your business</li>
-                    </ul>
-                </div>
+          </div>
+          <div class="service">
+            <img
+              src="icons/two.jpg"
+              alt="Analytics and reporting"
+              class="imageService"
+            />
+            <div>
+              <h3>Analytics and Reporting</h3>
+              <ul>
+                <li>In-depth analytics to track tour performance</li>
+                <li>
+                  Detailed reports on bookings, customer feedback, and
+                  financials
+                </li>
+                <li>Insights to help improve and grow your business</li>
+              </ul>
             </div>
-            <div class="service">
-                <img src="icons/one.jpg" class="imageService">
-                <div>
-                    <h3>Customer Support</h3>
-                    <ul>
-                        <li>24/7 customer support to assist with any issues or questions</li>
-                        <li>Dedicated support for both guides and travel companies</li>
-                        <li>Comprehensive help center with tutorials and FAQs</li>
-                    </ul>
-                </div>
+          </div>
+          <div class="service">
+            <img src="icons/one.jpg" class="imageService" />
+            <div>
+              <h3>Customer Support</h3>
+              <ul>
+                <li>
+                  24/7 customer support to assist with any issues or questions
+                </li>
+                <li>Dedicated support for both guides and travel companies</li>
+                <li>Comprehensive help center with tutorials and FAQs</li>
+              </ul>
             </div>
+          </div>
         </div>
+      </section>
     </section>
-</section>
 
-
-
-<section class="container containerbut" id="choose-us">
-    <div class="cta-container">
+    <section class="container containerbut" id="choose-us">
+      <div class="cta-container">
         <h3>Discover Why Kheoba Stands Out</h3>
-        <p>Unleash a multitude of features designed to elevate your travel business. From seamless tour management to personalized support, Kheoba has everything you need.</p>
+        <p>
+          Unleash a multitude of features designed to elevate your travel
+          business. From seamless tour management to personalized support,
+          Kheoba has everything you need.
+        </p>
         <a href="second.html">
-            <button class="button">Why choose Kheoba? Press here to find out</button>
+          <button class="button">
+            Why choose Kheoba? Press here to find out
+          </button>
         </a>
-    </div>
-</section>
-
-
+      </div>
+    </section>
 
     <footer>
-        <div class="container">
-            <p>&copy; 2024 Kheoba. All rights reserved.</p>
-        </div>
+      <div class="container">
+        <p>&copy; 2024 Kheoba. All rights reserved.</p>
+      </div>
     </footer>
-</body>
+
+    <script src="script.js"></script>
+  </body>
 </html>
