--- a/third.html
+++ b/third.html
@@ -1,118 +1,133 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kheoba - CRM and Features</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
-
+  <body>
     <div class="header-content">
-        <img src="icons/mainIcon.jpg" alt="Main Icon" class="logo">
-        <nav>
-            <ul class="navbar">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="second.html">Reasons</a></li>
-                <li><a href="third.html">Features</a></li>
-            </ul>
-        </nav>
+      <a href="index.html">
+        <img src="icons/mainIcon.jpg" alt="Main Icon" class="logo" />
+      </a>
+      <nav>
+        <ul class="navbar">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="second.html">Reasons</a></li>
+          <li><a href="third.html">Features</a></li>
+        </ul>
+      </nav>
     </div>
 
-    <header style="background: url(wallper/ab.png);">
-        <h1>CRM System and Features</h1>
+    <header style="background: url(wallper/ab.png)">
+      <h1>CRM System and Features</h1>
     </header>
 
-    <section class="container">
-        <h2>We have our CRM system located at kheoba.com</h2>
-        <div>
-            <h3>Tour Management Dashboard</h3>
-            <ul>
-                <li><strong>Tour Overview:</strong> Get a snapshot of all your upcoming tours, including dates, locations, and available spots.</li>
-                <li><strong>Booking Management:</strong> Easily view and manage all bookings, update availability, and communicate with customers.</li>
-                <li><strong>Tour Customization:</strong> Add detailed descriptions, upload photos, and provide important information about each tour.</li>
-            </ul>
+    <section class="last-container">
+      <h2>
+        We have our CRM system located at
+        <a href="http://kheoba.com" target="_blank">kheoba.com</a>
+      </h2>
+      <div>
+        <h3>Tour Management Dashboard</h3>
+        <ul>
+          <li>
+            <strong>Tour Overview:</strong> Get a snapshot of all your upcoming
+            tours, including dates, locations, and available spots.
+          </li>
+          <li>
+            <strong>Booking Management:</strong> Easily view and manage all
+            bookings, update availability, and communicate with customers.
+          </li>
+          <li>
+            <strong>Tour Customization:</strong> Add detailed descriptions,
+            upload photos, and provide important information about each tour.
+          </li>
+        </ul>
 
-            <h3>Personalized Assistant Interface</h3>
-            <ul>
-                <li><strong>Schedule Management:</strong> Keep track of all your tours and appointments in one place.</li>
-                <li><strong>Automated Responses:</strong> Set up automatic replies to common customer inquiries, saving you time and ensuring quick responses.</li>
-                <li><strong>Customization Options:</strong> Tailor the assistant to match your style and preferences.</li>
-            </ul>
+        <h3>Personalized Assistant Interface</h3>
+        <ul>
+          <li>
+            <strong>Schedule Management:</strong> Keep track of all your tours
+            and appointments in one place.
+          </li>
+          <li>
+            <strong>Automated Responses:</strong> Set up automatic replies to
+            common customer inquiries, saving you time and ensuring quick
+            responses.
+          </li>
+          <li>
+            <strong>Customization Options:</strong> Tailor the assistant to
+            match your style and preferences.
+          </li>
+        </ul>
 
-            <h3>Analytics and Reporting Page</h3>
-            <ul>
-                <li><strong>Performance Metrics:</strong> Track key metrics like number of bookings, customer satisfaction scores, and revenue.</li>
-                <li><strong>Detailed Reports:</strong> Generate reports that provide insights into your business performance, helping you make informed decisions.</li>
-                <li><strong>Customer Feedback:</strong> View and analyze customer reviews to continuously improve your services.</li>
-            </ul>
-        </div>
+        <h3>Analytics and Reporting Page</h3>
+        <ul>
+          <li>
+            <strong>Performance Metrics:</strong> Track key metrics like number
+            of bookings, customer satisfaction scores, and revenue.
+          </li>
+          <li>
+            <strong>Detailed Reports:</strong> Generate reports that provide
+            insights into your business performance, helping you make informed
+            decisions.
+          </li>
+          <li>
+            <strong>Customer Feedback:</strong> View and analyze customer
+            reviews to continuously improve your services.
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section>
-        <div class="container">
-            <h2>Photo Gallery</h2>
-            <div class="gallery">
-                <img src="ss/1.png" alt="Photo 1">
-                <img src="ss/2.png" alt="Photo 2">
-                <img src="ss/3.png" alt="Photo 3">
-                <img src="ss/4.png" alt="Photo 4">
-                <img src="ss/5.png" alt="Photo 5">
-                <img src="ss/6.png" alt="Photo 6">
-                <img src="ss/7.png" alt="Photo 7">
-                <img src="ss/8.png" alt="Photo 8">
-                <img src="ss/9.png" alt="Photo 9">
-            </div>
+      <div class="container">
+        <h2>Photo Gallery</h2>
+        <div class="gallery">
+          <img src="ss/1.png" alt="Photo 1" />
+          <img src="ss/2.png" alt="Photo 2" />
+          <img src="ss/3.png" alt="Photo 3" />
+          <img src="ss/4.png" alt="Photo 4" />
+          <img src="ss/5.png" alt="Photo 5" />
+          <img src="ss/6.png" alt="Photo 6" />
+          <img src="ss/7.png" alt="Photo 7" />
+          <img src="ss/8.png" alt="Photo 8" />
+          <img src="ss/9.png" alt="Photo 9" />
         </div>
+      </div>
     </section>
 
     <section class="containerbut">
-        <a href="index.html">
-            <button class="button">
-                Home
-            </button>
-        </a>
-        <a href="second.html">
-            <button class="button">
-                Why Choose Kheoba?
-            </button>
-        </a>
+      <a href="index.html">
+        <button class="button">Home</button>
+      </a>
+      <a href="second.html">
+        <button class="button">Why Choose Kheoba?</button>
+      </a>
     </section>
 
     <footer>
-        <div class="container">
-            <p>&copy; 2024 Kheoba. All rights reserved.</p>
-        </div>
+      <div class="container">
+        <p>&copy; 2024 Kheoba. All rights reserved.</p>
+      </div>
     </footer>
 
     <!-- Lightbox Modal -->
     <div id="lightbox" class="lightbox">
-        <span class="close" onclick="closeLightbox()">&times;</span>
-        <img class="lightbox-content" id="lightbox-img">
+      <span class="close" onclick="closeLightbox()">&times;</span>
+      <img class="lightbox-content" id="lightbox-img" />
+      <a class="prev" onclick="changeImage(-1)">&#10094;</a>
+      <a class="next" onclick="changeImage(1)">&#10095;</a>
     </div>
-
-    <script>
-        const galleryItems = document.querySelectorAll('.gallery img');
-        const lightbox = document.getElementById('lightbox');
-        const lightboxImg = document.getElementById('lightbox-img');
-
-        galleryItems.forEach(item => {
-            item.onclick = () => {
-                lightbox.style.display = 'block';
-                lightboxImg.src = item.src;
-            }
-        });
-
-        function closeLightbox() {
-            lightbox.style.display = 'none';
-        }
-    </script>
-
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
