Fix main images

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </nav>
     </div>
 
-    <header style="background: url(wallper/nature_image.png)">
+    <header style="background: url(wallper/nature_image.png) no-repeat center center; background-size: cover;">
       <div class="container">
         <h1>Welcome to Kheoba</h1>
         <p>
