--- a/second.html
+++ b/second.html
@@ -26,7 +26,7 @@
       </nav>
     </div>
 
-    <header style="background: url(wallper/forest.png)">
+    <header style="background: url(wallper/forest.png) no-repeat center center; background-size: cover;">
       <h1>Why Choose Kheoba?</h1>
     </header>
 
