--- a/third.html
+++ b/third.html
@@ -27,7 +27,7 @@
       </nav>
     </div>
 
-    <header style="background: url(wallper/ab.png)">
+    <header style="background: url(wallper/ab.png) no-repeat center center; background-size: cover;">
       <h1>CRM System and Features</h1>
     </header>
 
